[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/room.gd" type="Script" id=1]

[node name="room" type="RigidBody2D"]
collision_layer = 524288
collision_mask = 524288
mode = 2
contacts_reported = 20
contact_monitor = true
linear_velocity = Vector2( 0, 10 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false

[node name="door_container" type="Node" parent="."]

[node name="dead_body_container" type="Node" parent="."]

[node name="spawn_timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_shape_entered" from="." to="." method="_on_room_body_shape_entered"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
